--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -74,7 +74,5 @@
   </div>
 </ng-template>
 
-<hr>
-
-<pre>{{closeResult}}</pre>
-<router-outlet></router-outlet>
+<!-- <pre>{{closeResult}}</pre>
+ --><router-outlet></router-outlet>
