--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -1,10 +1,138 @@
+body {
+	height: 100%;
+	border: 2px solid red;
+	margin: 0 50px;
+}
 
+.movie h2 {
+  font-size: 16px;
+  letter-spacing: 3px;
+  color: #FFC463;
+}
+
+.movie h3, .movie p {
+  font-size: 10px;
+  letter-spacing: 1.5px;
+}
+
+.movie h3, .movie h2, .movie p {
+  margin-top: 20px;
+  color: white;	
+  padding-bottom: 10px;
+  border-bottom: 1px solid #999999;
+  width: 170px;
+}
+
+.movie h2 {
+  font-size: 16px;
+  letter-spacing: 2.5px;
+  color: #FDC162;
+}
 
 .movie img {
-	border: 4px solid #fff;
-	border-radius: 2px;
+	border: 3px solid #fff;
+	border-radius: 3px;
+	margin-bottom: 16px;
+
 }
 
 .movie img:hover {
 	cursor: pointer;
+}
+
+.navigation-bar {
+	width: 100%;
+}
+
+.movies-container {
+	padding: 100px 0;
+	padding-right: 70px;
+	display: grid;
+	grid-template: repeat(1, 1fr) / repeat(12, 1fr);
+	max-width: 1000px;
+	min-width: 1000px;
+	margin: 60px auto;
+}
+
+.movie {
+	width: 100px;
+	margin: auto;
+	text-align: center;
+}
+
+#movie-1 {
+  grid-area: 1 / 1 / 2 / 5;
+}
+
+#movie-2 {
+  grid-area: 1 / 5 / 2 / 9;
+}
+
+#movie-3 {
+  grid-area: 1 / 9 / 2 / 13;
+}
+
+@media(max-width: 1000px) {
+	.movies-container {
+		display: grid;
+		max-width: 750px;
+		min-width: 600px;
+		grid-template: repeat(2, 1fr) / repeat(6, 1fr);
+		grid-row-gap: 50px;
+	}
+
+	.movie {
+	}
+
+	#movie-1 {
+	   grid-area: 1 / 1 / 2 / 4;
+	}
+
+	#movie-2 {
+	  grid-area: 1 / 4 / 2 / 7;
+	}
+
+	#movie-3 {
+	  grid-area: 2 / 1 / 3 / 4;
+	}
+}
+
+@media(max-width: 600px) {
+	.movies-container {
+		display: grid;
+		max-width: 350px;
+		min-width: 350px;
+		grid-template: repeat(3, 1fr) / repeat(3, 1fr);
+		grid-row-gap: 35px;
+	}
+
+	#movie-1 {
+		grid-area: 1 / 1 / 2 / 4;
+	}
+
+	#movie-2 {
+		grid-area: 2 / 1 / 3 / 4;
+	}
+
+	#movie-3 {
+		grid-area: 3 / 1 / 4 / 4;
+	}
+
+
+	.movie img {
+		height: 215px;
+		width: 135px;
+	}
+
+	.movie h2 {
+	  font-size: 12px;
+	}
+
+	.movie h3, .movie p {
+      font-size: 8px;
+	}
+
+	.movie h2, .movie h3, .movie p {
+		width: 120px;
+	}
 }
