--- a/src/app/pages/movie/movie.component.html
+++ b/src/app/pages/movie/movie.component.html
@@ -1,15 +1,15 @@
-<div>
-	<div>
-		<img [src]="movie.image" height="400" width="300" />
+<div class="movie-container">
+	<div class="movie-header">
+		<img [src]="movie.image" height="350" width="250" />
 	</div>
-	<div>
-		<form (ngSubmit)="createRating()">
+	<div class="movie-forms">
+		<form (ngSubmit)="createRating()" class="form">
 			<input [(ngModel)]="rating.number" type="number" placeholder="Rating 1 - 5" name="rating" />
-			<button type="submit">Add Rating</button>
+			<button type="submit" class="btn btn-outline-light">Add Rating</button>
 		</form>
-		<form (ngSubmit)="createReview()">
+		<form (ngSubmit)="createReview()" class="form">
 			<textarea [(ngModel)]="review.body" placeholder="Type in your review" name="review"> </textarea>
-			<button type="submit">Add Review</button>
+			<button type="submit" class="btn btn-outline-light">Add Review</button>
 		</form>
 	</div>
 </div>
