--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+body { 
+	background-color: #032A4A;
+}
+
+.btn {
+  letter-spacing: 1px
+}
