--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -29,6 +29,10 @@ body, html {
 	margin: auto;
 }
 
+.user-input {
+  margin: 15px 0;
+}
+
 .modal-header h4 {
 	margin: auto;
 	text-align: right;
@@ -37,10 +41,6 @@ body, html {
 	left: 65px;
 	color: white;
 	font-size: 26px;
-}
-
-.user-input {
-	margin: 15px 0;
 }
 
 .navigation-bar {
@@ -59,7 +59,11 @@ body, html {
 	padding: 0 8px;
 }
 
-.nav-item:hover {
+#logged-user {
+  color: #0078F2;
+}
+
+.nav-item:not(:last-child):hover {
 	padding-bottom: 8px;
 	border-bottom: 2px solid #0078F2;
 }
