--- a/src/styles.css
+++ b/src/styles.css
@@ -1,8 +1,40 @@
 /* You can add global styles to this file, and also import other style files */
+
 body { 
 	background-color: #032A4A;
 }
 
 .btn {
   letter-spacing: 1px
+}
+
+.close span {
+  font-size: 30px;
+}
+
+.close span:hover {
+	color: #FF1919;
+	font-size: 30px;
+}
+
+.doggy {
+	margin: auto;
+}
+
+.modal-header {
+	background: #0274DE;
+}
+
+.modal-body {
+	margin: auto;
+}
+
+.modal-header h4 {
+	margin: auto;
+	text-align: right;
+	position: relative;
+	letter-spacing: 2px;
+	left: 65px;
+	color: white;
+	font-size: 26px;
 }
